cabal-version:       >=1.10
name:                func-test
version:             0.1.0.0
build-type:          Simple

test-suite func-test
  main-is:             FuncTest.hs
  type:                exitcode-stdio-1.0
  build-depends:       base <4.15
                     , lsp-test
                     , lsp
                     , data-default
                     , process
                     , lens
                     , unliftio
                     , hspec
                     , async
  default-language:    Haskell2010
